--- a/about.html
+++ b/about.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>A</title>
 </head>
 <body>
-    <h1>Hello there!</h1>
-    <h2>Thanks!!</h2>
+    Another File
 </body>
 </html>
